5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1709_3035.log
== TEST (2019-05-02 11:35:41) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:40) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:34) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>180) or (x!=180) or (x!=270):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:44) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>180) or (x!=180) or (x!=270):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:14) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>180) or (x!=180) or (x!=270):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:22) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>180) or (x!=180) or (x!=270):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:03) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:08) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(x, 4))

-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:10) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	x = sin(x)
	print(round(x, 4))

-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:25) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	x = sin(x)
	print(round(x, 4))

-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:35) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	x = sin(x)
	print(round(x, 4))

-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:43) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	x = sin(x)
	print(round(x, 4))

-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:09) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	z = sin(x)
	print(round(z, 4))

-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:38) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = sin(y)
	print(round(y, 4))

-- OUTPUT:
0.7854
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:09) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	z = sin(y)
	print(round(y, 4))

-- OUTPUT:
0.7854
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:12) 
-- CODE:
from math import*
x = float(input("valor de x: "))

y = radians(x)

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	z = sin(y)
	print(round(y, 4))

-- OUTPUT:
0.7854
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:51:30) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(y, 4))
elif (90<=x<180) or (x==270):
-- ERROR:
File "XXXX", line 11
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:18) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(b, 4))
elif (90<=x<180) or (x==270):
	a = radians(x)
	b = cos(x)
	print(round(b, 4))
-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:29) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(b, 4))
elif (90<=x<180) or (x==270):
	a = radians(x)
	b = cos(x)
	print(round(b, 4))
-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:33) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(b, 4))
elif (90<=x<180) or (x==270):
	a = radians(x)
	b = cos(x)
	print(round(b, 4))
-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:00) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(b, 4))
elif (90<=x<180) or (x==270):
	a = radians(x)
	b = cos(x)
	print(round(b, 4))
-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:06) 
-- CODE:
from math import*
x = float(input("valor de x: "))

if (x<0) or (x>=180):
	print("entrada invalida")
elif (0<=x<90) or (x==180):
	a = radians(x)
	b = sin(x)
	print(round(b, 4))
elif (90<=x<180) or (x==270):
	a = radians(x)
	b = cos(x)
	print(round(b, 4))
-- OUTPUT:
0.8509
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
